# shade-stream

./: .env.example  .gitignore  .gitleaks.toml  README.md  package-lock.json  package.json  tsconfig.json
contracts/stellar/: Cargo.toml
contracts/stellar/commitment_tree/: Cargo.toml
contracts/stellar/commitment_tree/src/: lib.rs
contracts/stellar/compliance_registry/: Cargo.toml
contracts/stellar/compliance_registry/src/: lib.rs
contracts/stellar/governance_guardian/: Cargo.toml
contracts/stellar/governance_guardian/src/: lib.rs  tests.rs
contracts/stellar/intent_escrow/: Cargo.toml
contracts/stellar/intent_escrow/src/: lib.rs
contracts/stellar/lean_imt/: Cargo.toml
contracts/stellar/lean_imt/src/: lib.rs
contracts/stellar/nullifier_registry/: Cargo.toml
contracts/stellar/nullifier_registry/src/: lib.rs
contracts/stellar/proof_verifiers/: Cargo.toml
contracts/stellar/proof_verifiers/src/: lib.rs
contracts/stellar/shade_vault/: Cargo.toml
contracts/stellar/shade_vault/src/: lib.rs
contracts/stellar/shielded_pool/: Cargo.toml
contracts/stellar/shielded_pool/src/: lib.rs  tests.rs
docs/: ARC_PORT_STATUS.md  ASSET_BINDING.md  CCTP_STELLAR.md  COMPLIANCE_MODEL.md  E2E_REAL_WORKFLOW.md  FRONTEND_DESIGN.md  MPC_SETTLEMENT.md  RFQ_USDC_XLM.md  SECURITY_MODEL.md  SHADE_STREAMS_STATUS.md  TESTNET_E2E.md  app-wallet-architecture.md  arc-zk-proof-system.md  architecture-bible.md  bible-gap-analysis.md  blockers.md  cctp-arbitrum-stellar.md  note-vault-recovery.md  phase1-build-spec.md  privy-stellar-integration.md  protocol-fixes.md  research-lock-phase2-wallets.md  (+6 more)
tools/circom2soroban/: Cargo.toml
tools/circom2soroban/src/: main.rs
(+203 files in other folders)
