[package]
name = "circom2soroban"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "circom2soroban"
path = "src/main.rs"

[dependencies]
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4.2"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[profile.release]
opt-level = 2
