[package]
name = "shielded_pool"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.1.0"
# Phase 7 root integrity (spec §13): the pool owns tree state via the on-chain
# incremental Merkle tree (same LeanIMT the circuits + coinutils use), so a
# caller can no longer supply a forged new_root.
lean-imt = { path = "../lean_imt" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
ed25519-dalek = "2.2.0"

[profile.release]
overflow-checks = true
opt-level = "z"
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true
